Fix spacing of analysis chart

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 }
 
 .chart-spacing {
-  margin-top: 5%;
+  padding: 100px;
 }
 
 .complex-navbar {
